[package]
name = "flightpath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "1.0.8"
actix-web = "4.2.1"
assert-json-diff = "2.0.2"
itertools = "0.10.5"
serde = { version = "1.0.145", features = [ "derive" ]}
serde_json = "1.0.85"
